<?xml version="1.0" encoding="utf-8" standalone="no"?>
<resources>
    <string name="hello">Hello World, MainActivity!</string>
    <string name="app_name">Tech Mun 2011</string>
    <string name="mesas_fragment_title_bar_caption">Mesas</string>
    <string name="footer_message">
    	Tech.ch.mun 2011. Oct. 29 a Oct. 31\nUn evento de Prepa Tec. Del Tecnológico de Monterrey.
    </string>
    <string name="comentarios_publish_layout_header">Enviá un Comentario</string>
    <string-array name="test_string_array">
        <item>Uno</item>
        <item>Dos</item>
        <item>Tres</item>
        <item>Cuatro</item>
    </string-array>
        <string name="commentarios_str">Comentarios</string>
        <string name="btn_send">Enviar</string>
        <string name="btn_cancel">Cancelar</string>
        <string name="txt_comentario">Comentario</string>
        <string name="autor">Nombre</string>
        <string name="email">E-Mail</string>
        <string name="mensajes">Mensajes</string>
        <string name="more">Mas</string>
        <string name="more_mensajes">Mas Mensajes</string>
        <string name="mensaje">Mensaje</string>
        <string name="empty">No existen Elementos</string>
      	<string name="mensaje_send_header">Enviar Mensaje</string>
      	<string name="titulo">Titulo</string>
      	<string name="mensaje_sending">Enviando Mensaje</string>
      	<string name="mensaje_sent">Mensaje Enviado</string>
      	<string name="mensaje_not_sent">Error al Enviar el Mensaje. Intenta Nuevamente</string>
      	
      	    <string name="pull_to_refresh_pull_label">Jala para refrescar...</string>
    <string name="pull_to_refresh_release_label">Libera para refrescar...</string>
    <string name="pull_to_refresh_refreshing_label">Cargando...</string>
    <string name="pull_to_refresh_tap_label">Presiona para refrescar...</string>
    <string name="sending_mensaje">Enviando Mensaje...</string>
    <string name="user">Usuario o Email:</string>
    <string name="password">Contraseña:</string>
    <string name="login">Acceder</string>
    <string name="login_failed_msg">Error al verificar usuario y contraseña. Por favor asegurate que los datos estan correctos e intenta nuevamente.</string>
    <string name="login_correct_msg">Usuario y contraseña validos</string>
    <string name="auth_progress_dialog_title">Login</string>
    <string name="auth_progress_dialog_cap">Comunicando con el servidor. Por favor espere</string>
    
    <string name="comentario_sending">Enviando Comentario</string>
    <string name="comentario_sent">Tu comentario fue enviado con exito</string>
    <string name="comentario_not_sent">No fue posible enviar tu comentario, intenta de nuevo o contacta al administrador</string>
    
    <string name="initial_geo_uri">"geo:28.674389,-106.076968?z=20"</string>
    
    <string name="login_baner">Acceder con tu usuario y contraseña registrados en la pagina web 
        de Tec Ch Mun 2011, te permitirá enviar mensajes desde tu dispositivo móvil sobre
        lo que esta ocurriendo en el evento.\nSolo ingresa tu usuario y contraseña y accede 
        a la sección de mensajes desde el menú principal.\nSi no recuerdas tu usuario y contraseña contacta al administrador del evento</string>
        <!--
    <string name="initial_geo_uri">"google.streetview:cbll=28.674389,-106.076968&amp;mz=20"</string>
    -->
    
    <string name="comentarios_list_empty_list">No existen comentarios aun!!</string>
    
    <string name="refresh">Refrescar</string>
    <string name="no_evento_selected_to_publish">No se selecciono un evento para publicar el comentario, trata de refrescar la pagina para corregir el error</string>
    
    <string name="anonymous">Anónimo</string>
    <string name="hola">Hola </string>    
    <string name="btn_logout">Salir</string>    
</resources>
