<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="#FFFFFF">
    <TextView android:id="@+id/comentarios_publish_layout_header" 
    	android:text="@string/comentarios_publish_layout_header" 
    	android:layout_height="wrap_content" 
    	android:layout_width="match_parent" 
    	android:gravity="center_horizontal"
    	android:background="#0000FF"
    	android:textAppearance="?android:attr/textAppearanceMedium" 
    	android:layout_alignParentTop="true" 
    	android:layout_alignParentRight="true"></TextView>
    <TextView android:id="@+id/comentarios_publish_layout_txt_comentario" android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_below="@+id/comentarios_publish_layout_header" android:layout_alignParentLeft="true" android:text="@string/txt_comentario"></TextView>
    <EditText android:inputType="textMultiLine" android:id="@+id/comentarios_publish_layout_edt_comentario" android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_alignTop="@+id/comentarios_publish_layout_txt_comentario" android:layout_toRightOf="@+id/comentarios_publish_layout_txt_comentario" android:layout_alignParentRight="true">
        <requestFocus></requestFocus>
    </EditText>
    <TextView android:id="@+id/comenarios_publish_layout_txt_nombre" android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_below="@+id/comentarios_publish_layout_edt_comentario" android:layout_alignParentLeft="true" android:text="@string/autor"></TextView>
    <EditText android:inputType="textPersonName" android:id="@+id/comentarios_publish_layout_edt_nombre" android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_below="@+id/comentarios_publish_layout_edt_comentario" android:layout_alignLeft="@+id/comentarios_publish_layout_edt_comentario" android:layout_alignParentRight="true"></EditText>
    <TextView android:id="@+id/comentarios_publish_layout_txt_email" android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_below="@+id/comentarios_publish_layout_edt_nombre" android:layout_alignParentLeft="true" android:text="@string/email"></TextView>
    <EditText android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/comentarios_publish_layout_edt_email" android:inputType="textEmailAddress" android:layout_alignTop="@+id/comentarios_publish_layout_txt_email" android:layout_toRightOf="@+id/comentarios_publish_layout_txt_comentario" android:layout_alignParentRight="true"></EditText>
    <Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/btn_cancel" android:layout_alignTop="@+id/comentarios_publish_layout_btn_accept" android:layout_alignParentRight="true" android:id="@+id/comentarios_publish_layout_btn_cancel"></Button>
    <Button android:layout_width="wrap_content" android:id="@+id/comentarios_publish_layout_btn_accept" android:layout_height="wrap_content" android:text="@string/btn_send" android:layout_below="@+id/comentarios_publish_layout_edt_email" android:layout_toLeftOf="@+id/comentarios_publish_layout_btn_cancel"></Button>
    
</RelativeLayout>
