<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <include layout="@layout/action_bar" android:layout_width="match_parent" 
 	android:id="@+id/login_action_bar"
	android:layout_height="wrap_content"/>
    
    <TextView
        android:id="@+id/login_layout_txt_baner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@id/login_action_bar"
        android:text="@string/login_baner"
        android:textAppearance="?android:attr/textAppearanceMedium" >
    </TextView>
    
    <TextView
        android:id="@+id/login_layout_txt_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@id/login_layout_txt_baner"
        android:paddingTop="15dip"
        android:text="@string/user"
        android:textAppearance="?android:attr/textAppearanceMedium" >

    </TextView> 

    <EditText
        android:id="@+id/login_layout_edt_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/login_layout_txt_user" />

    <TextView
        android:id="@+id/login_layout_txt_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/login_layout_edt_user"
        android:text="@string/password"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/login_layout_edt_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/login_layout_txt_password"
        android:inputType="textPassword" >

    </EditText>

    <Button
        android:id="@+id/login_layout_btn_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/login_layout_edt_password"
        android:text="@string/btn_cancel" />

    <Button
        android:id="@+id/login_layout_btn_accept"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/login_layout_btn_cancel"
        android:layout_alignBottom="@+id/login_layout_btn_cancel"
        android:layout_toLeftOf="@+id/login_layout_btn_cancel"
        android:text="@string/btn_send" />
    
    <Button
        android:id="@+id/login_layout_btn_logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/login_layout_btn_cancel"
        android:layout_alignBottom="@+id/login_layout_btn_cancel"
        android:layout_alignParentLeft="true"
        android:text="@string/btn_logout" />

</RelativeLayout>