<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="match_parent"
  android:layout_height="match_parent">
  <include layout="@layout/action_bar" android:layout_width="match_parent" 
  android:id="@+id/mensajes_action_bar"
	android:layout_height="wrap_content"/>
	
	 <!-- 
	<org.blanco.techmun.android.fragments.MensajesListFragment 
	android:layout_width="match_parent" android:layout_height="match_parent"
	android:name="org.blanco.techmun.android.fragments.EventosListFragment"
	android:layout_below="@id/mensajes_action_bar" />
	 -->
   <TextView android:text="@string/mensajes" 
   	style="@style/header" android:gravity="center_horizontal" 
   	android:textAppearance="?android:attr/textAppearanceMedium" 
   	android:layout_width="match_parent" android:id="@+id/mensajes_mensaje_header" 
   	android:layout_height="wrap_content" android:layout_below="@+id/mensajes_action_bar" 
   	android:layout_alignParentLeft="true">
   	
   	</TextView>

  <com.markupartist.android.widget.PullToRefreshListView android:id="@+id/mensajes_list" 
  	android:layout_width="match_parent" android:layout_height="match_parent" 
  	android:layout_alignParentLeft="true" 
  	android:layout_alignParentRight="true" 
  	android:layout_below="@+id/mensajes_mensaje_header" android:layout_above="@+id/mensaje_post_mensaje_post_form">
  	</com.markupartist.android.widget.PullToRefreshListView>
  
  <RelativeLayout android:layout_width="wrap_content" 
  	android:id="@+id/mensaje_post_mensaje_post_form" android:layout_height="24dip" 
  	android:layout_alignParentBottom="true" android:layout_alignParentLeft="true"
  	android:layout_alignParentRight="true">
  
  <TextView android:text="@string/mensaje_send_header" 
  	android:textAppearance="?android:attr/textAppearanceMedium" 
  	android:gravity="center_horizontal"
  	style="@style/header"
  	android:layout_width="match_parent" android:id="@+id/mensajes_post_mensaje_header" 
  	android:layout_height="wrap_content" 
  	android:layout_centerHorizontal="true" />
  	
  
    
  <TextView android:text="@string/mensaje" android:layout_width="wrap_content" android:id="@+id/mensajes_post_mensaje_txt_mensaje" 
  	android:layout_height="wrap_content" android:layout_alignParentLeft="true"
  	android:layout_below="@+id/mensajes_post_mensaje_header"></TextView>
  <EditText android:layout_width="wrap_content" android:inputType="textMultiLine" 
  android:layout_height="wrap_content"  android:layout_alignParentRight="true" android:layout_toRightOf="@+id/mensajes_post_mensaje_txt_mensaje" android:layout_below="@id/mensajes_post_mensaje_header" android:id="@+id/mensajes_post_mensaje_edt_mensaje"
  android:minLines="5" />
      
  <Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_below="@+id/mensajes_post_mensaje_edt_mensaje" android:layout_alignParentRight="true" android:id="@+id/mensaje_post_mensaje_btn_cancel" android:text="@string/btn_cancel"></Button>
  <Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_below="@+id/mensajes_post_mensaje_edt_mensaje" android:layout_toLeftOf="@+id/mensaje_post_mensaje_btn_cancel" android:id="@+id/mensaje_post_mensaje_btn_acept" android:text="@string/btn_send"></Button>
  
  <ImageButton android:id="@+id/mensajes_post_mensaje_add" 
  	android:layout_width="wrap_content" 
  	android:layout_height="wrap_content"
  	android:src="@android:drawable/ic_input_add" 
  	android:layout_below="@+id/mensajes_post_mensaje_edt_mensaje"
  	android:layout_alignBottom="@+id/mensaje_post_mensaje_btn_acept" 
  	android:layout_toLeftOf="@+id/mensaje_post_mensaje_btn_acept" />
  	
  </RelativeLayout>

</RelativeLayout>
